--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Home Page Starts */
 /* Header Section Starts */
 
 .top-header .container {
@@ -6,7 +7,7 @@
   align-items: center;
   width: 90%;
   max-width: 1250px;
-  margin: auto;
+  margin-top: 10px;
 }
 
 .left i {
@@ -41,6 +42,13 @@
 
 .navbar {
   border-bottom: 1px solid;
+  background-color: white;
+}
+
+#navbar {
+  position: sticky;
+  top: 0px;
+  z-index: 1;
 }
 
 nav .container {
@@ -202,6 +210,7 @@ nav .container {
   height: 450px;
 }
 
+/* Featured Section Ends */
 /* Video Section Starts Here */
 
 .video-bg {
@@ -517,6 +526,8 @@ iframe {
 
 .form {
   background: #fff;
+  color: black;
+  text-align: left;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -590,9 +601,12 @@ footer {
 }
 
 /* Footer Section Ends */
+/* Home Page Ends */
+
+
+
 
 /* Properties Page Starts*/
-
 /* Properties Head Starts */
 
 .head {
@@ -635,11 +649,9 @@ footer {
   border-radius: 5px;
   padding: 8px 16px;
 }
-
 /* Properties Head Ends */
 
 /* Property Cards Section Starts */
-
 .properties1 {
   width: 98%;
 }
@@ -706,12 +718,12 @@ footer {
 }
 
 /* Property Cards Section Ends */
-
 /* Properties Page Ends */
 
-/* Property Details Page Starts */
 
-/* Properties Details Starts */
+
+
+/* Property Details Page Starts */
 
 .property-detail {
   margin: 50px;
@@ -777,6 +789,80 @@ footer {
   color: orangered;
 }
 
-/* Properties Details Ends */
+/* Property Details Page Ends */
 
-/* Property Deatils Page Ends */
+
+
+
+/* Contact Page Starts */
+
+.contact-table {
+  margin: 60px;
+}
+
+.contact-table1 {
+  display: flex;
+  gap: 150px;
+}
+
+.contact-title .tag {
+  color: orangered;
+}
+
+.info-box {
+  border-radius: 1px solid;
+  padding: 10px 20px;
+  margin-top: 80px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  width: 200px;
+  border-radius: 10px;
+  background-color: whitesmoke;
+  margin: 20px;
+}
+
+.info-item img {
+  width: 40px;
+  height: 40px;
+}
+
+.form1 {
+  background: whitesmoke;
+  width: 30%;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  padding: 20px 30px;
+}
+
+.form1 form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.submit1 {
+  background-color: black;
+  color: white;
+  width: 150px;
+  border-radius: 12px;
+  font-size: large;
+  align-items: center;
+  text-align: center;
+  margin-left: 100px;
+}
+
+.googlemap {
+  height: 400px;
+  width: 80%;
+  border-radius: none;
+  
+}
+
+/* Contact Page Ends */
